# hddwiper

./: .cproject  .gitignore  .project  Cargo.toml  Changelog  Data.hpp  DataAssembly.hpp  DataBase.hpp  DummyCallback.cpp  DummyCallback.hpp  HDDWiper.cpp  HDDWiper.hpp  KernelEntropy.cpp  KernelEntropy.hpp  KernelEntropyProducer.cpp  KernelEntropyProducer.hpp  Makefile  OutputFile.cpp  OutputFile.hpp  Profiler.hpp  RC4Streamgenerator.hpp  README.md  ThreadsafeQueue.cpp  ThreadsafeQueue.hpp  main.cpp
.github/workflows/: ci.yml
file/: AbstractFile.hpp  InputFile.hpp  OutputFile.hpp
file/impl/: AbstractFile.cpp  AbstractFile.impl.hpp  InputFile.cpp  InputFile.impl.hpp  OutputFile.cpp  OutputFile.impl.hpp
kernelentropy/: KernelEntropy.hpp  KernelEntropyProducer.cpp  KernelEntropyProducer.hpp
kernelentropy/impl/: KernelEntropy.cpp  KernelEntropyProducer.cpp  KernelEntropyProducer.impl.hpp
output/: OutputFile.hpp
producer/: Assembly.cpp  Assembly.hpp  Producer.cpp  Producer.hpp
producer/impl/: Assembly.cpp  Assembly.impl.hpp  Producer.cpp  Producer.impl.hpp
randomstream/: RandomStreamGenerator.hpp  RandomStreamProducer.hpp  RandomStreamProducerAutoseed.hpp
randomstream/impl/: RandomStreamGenerator.cpp  RandomStreamGenerator.impl.hpp  RandomStreamProducer.cpp  RandomStreamProducer.impl.hpp  RandomStreamProducerAutoseed.cpp  RandomStreamProducerAutoseed.impl.hpp
rc4/: RC4StreamProducer.cpp  RC4StreamProducer.hpp  RC4StreamProducerAutoseed.hpp  RC4Streamgenerator.cpp  RC4Streamgenerator.hpp
rc4/impl/: RC4StreamProducer.cpp  RC4StreamProducer.impl.hpp  RC4StreamProducerAutoseed.cpp  RC4StreamProducerAutoseed.impl.hpp  RC4Streamgenerator.cpp  RC4Streamgenerator.impl.hpp
rust/: Cargo.toml
rust/src/: block_writer.rs  byte_stream_producer.rs  composite_xor_producer.rs  main.rs  monitor.rs  producer.rs  random_bytes_producer.rs
rust/src/byte_stream/: block_source.rs  block_source_byte_stream.rs  consumer_byte_stream.rs  mod.rs  producer_byte_stream.rs
rust/src/random/: composite.rs  mod.rs  os.rs  rdrand.rs  reseeding.rs  xchacha.rs  xsalsa20.rs
src/: block_writer.rs  cancellation_token.rs  main.rs  monitor.rs  producer.rs
src/byte_stream/: block_source.rs  block_source_byte_stream.rs  byte_stream_producer.rs  mod.rs  producer_byte_stream.rs  xor_byte_stream.rs
src/random/: composite.rs  mod.rs  rdrand.rs  reseeding.rs
util/: DataAssembly.cpp  DataAssembly.hpp  DummyCallback.hpp  Profiler.hpp  cast.hpp
util/data/: Data.hpp  DataBase.cpp  DataBase.hpp
util/data/impl/: Data.cpp  Data.impl.hpp  (+2 more)
util/impl/: DummyCallback.cpp  DummyCallback.impl.hpp  Profiler.cpp  Profiler.impl.hpp  cast.cpp  cast.impl.hpp
util/thread/: Semaphore.cpp  Semaphore.hpp  Threadsafe.cpp  Threadsafe.hpp  ThreadsafeQueue.hpp
(+6 files in other folders)
