[package]
name = "hddwiper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "^1.0.57"
flume = "^0.10.12"
async-trait = "^0.1.53"
rand = "^0.8.5"
rdrand = "^0.8.2"
generic-array = "^0.14.5"
salsa20 = "^0.10.2"
log = "^0.4.16"
env_logger = "^0.9.0"
running-average = "^0.1.0"
futures = "^0.3.21"
clap= {version = "^3.1.12", features = ["derive"]}
crossbeam-channel = "^0.5.4"

[dev-dependencies]
hex = "^0.4.3"
tokio = {version = "^1.17.0", features = ["macros", "rt-multi-thread"]}

[profile.release]
lto = "fat"
