[package]
name = "hddwiper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.57"
flume = "^0.10.12"
async-trait = "^0.1.53"
rand = "^0.8.5"
rdrand = "^0.8.2"
tokio = {version = "^1.17.0", features = ["macros", "rt-multi-thread"]}
generic-array = "^0.14.5"
salsa20 = "^0.10.2"
log = "^0.4.16"
env_logger = "^0.9.0"
running-average = "0.1.0"
futures = "^0.3.21"

[dev-dependencies]
hex = "^0.4.3"

[profile.release]
lto = "fat"
